trying to fix a traffic light